# TuringMachine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  spec-reference.md  user-guide.md
specs/: binary_increment.json  busy_beaver_2state.json  unary_increment.json
src/tmviz/: __init__.py  __main__.py  main.py
src/tmviz/app/: __init__.py  commands.py  controller.py  events.py  services.py  statechart.py
src/tmviz/domain/: __init__.py  configuration.py  exceptions.py  machine.py  moves.py  rule.py  symbols.py  tape.py
src/tmviz/factory/: __init__.py  machine_factory.py  spec_models.py  validators.py
src/tmviz/infra/: __init__.py  event_bus.py  logging_config.py  spec_loader.py
src/tmviz/ui/: __init__.py  input_adapter.py  layout.py  renderer.py  theme.py  widgets.py
tests/: test_cli.py  test_controller.py  test_domain_machine.py  test_factory.py  test_renderer.py  test_specs.py  test_tape.py  test_ui_layout.py
